--- a/Question 1/managing lecturers.yml
+++ b/Question 1/managing lecturers.yml
@@ -2,7 +2,7 @@ openapi: '3.0.2'
 info:
   title: Lecturer API
   version: 1.0.0
-  description: API for managing lecturers with their courses
+  description: API for managing lecturers from different offices and different courses they teach
 
 servers:
   - url: http://localhost:4000
@@ -89,7 +89,7 @@ paths:
 
   /lecturers/teaching/{courseCode}:
     get:
-      summary: Get lecturers teaching with same course
+      summary: Get lecturers teaching a certain course
       operationId: getLecturersTeachingCourse
       parameters:
         - name: courseCode
